removed sitemap builder (for a while)

--- a/package.json
+++ b/package.json
@@ -8,6 +8,5 @@
   "devDependencies": {
     "expresso": "0.7.6"
   },
-  "main": "index",
-  "bin": { "node-sitemap": "./bin/node-sitemap" }
+  "main": "index"
 }
