--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sitemap",
-  "version": "0.5.0",
+  "version": "0.6.0a",
   "description": "Sitemap-generating framework",
   "keywords": ["sitemap", "sitemap.xml"],
   "repository": "git://github.com/ekalinin/sitemap.js.git",
