--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "sitemap",
-  "version": "0.6.0a",
+  "version": "0.6.0",
   "description": "Sitemap-generating framework",
   "keywords": ["sitemap", "sitemap.xml"],
   "repository": "git://github.com/ekalinin/sitemap.js.git",
   "author": "Eugene Kalinin <e.v.kalinin@gmail.com>",
   "devDependencies": {
-    "expresso": "0.7.6"
+    "expresso": "0.8.1"
   },
   "main": "index"
 }
