--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "repository": "git://github.com/ekalinin/sitemap.js.git",
   "author": "Eugene Kalinin <e.v.kalinin@gmail.com>",
   "devDependencies": {
-    "expresso": "0.8.1"
+    "expresso": "^0.9.2"
   },
   "main": "index",
   "scripts": {
