--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "repository": "git://github.com/ekalinin/sitemap.js.git",
   "author": "Eugene Kalinin <e.v.kalinin@gmail.com>",
   "devDependencies": {
-    "expresso": "^0.9.2"
+    "expresso": "^0.9.2",
+    "underscore": "1.7.0"
   },
   "main": "index",
   "scripts": {
