--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "keywords": ["sitemap", "sitemap.xml"],
   "repository": "git://github.com/ekalinin/sitemap.js.git",
   "author": "Eugene Kalinin <e.v.kalinin@gmail.com>",
-  "devDependencies": {
-    "expresso": "^0.9.2",
+  "dependencies": {
     "underscore": "1.7.0"
+  },
+  "devDependencies": {
+    "expresso": "^0.9.2"
   },
   "main": "index",
   "scripts": {
