--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "name": "sitemap",
   "version": "0.8.1",
   "description": "Sitemap-generating framework",
-  "keywords": ["sitemap", "sitemap.xml"],
+  "keywords": [
+    "sitemap",
+    "sitemap.xml"
+  ],
   "repository": "git://github.com/ekalinin/sitemap.js.git",
   "author": "Eugene Kalinin <e.v.kalinin@gmail.com>",
   "dependencies": {
-    "underscore": "1.7.0"
+    "underscore": "^1.7.0"
   },
   "devDependencies": {
     "expresso": "^0.9.2"
