--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "repository": "git://github.com/ekalinin/sitemap.js.git",
   "author": "Eugene Kalinin <e.v.kalinin@gmail.com>",
   "dependencies": {
-    "underscore": "^1.7.0"
+    "underscore": "^1.7.0",
+    "url-join": "^0.0.1"
   },
   "devDependencies": {
     "expresso": "^0.9.2"
