--- a/bower.json
+++ b/bower.json
@@ -1,8 +1,9 @@
 {
   "name": "sitemap.js",
   "main": "index.js",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "dependencies": {
+    "url-join": "^0.0.1",
     "underscore": "1.7.0"
   },
   "devDependencies": {
