--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "underscore": "^1.7.0"
   },
   "devDependencies": {
-    "expresso": "^0.9.2"
+    "expresso": "^0.9.2",
+    "sinon": "^1.16.1"
   },
   "main": "index",
   "scripts": {
