--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   },
   "devDependencies": {
     "expresso": "^0.9.2",
-    "sinon": "^1.16.1"
+    "sinon": "^1.16.1",
+    "stats-lite": "^2.1.1"
   },
   "main": "index",
   "scripts": {
