--- a/package.json
+++ b/package.json
@@ -19,6 +19,12 @@
     "sinon": "^1.16.1",
     "stats-lite": "^2.1.1"
   },
+  {
+    "engines": {
+      "npm": "^4.0.0",
+      "node": ">=6.0.0"
+    }
+  },
   "main": "index",
   "scripts": {
     "test": "./node_modules/expresso/bin/expresso tests/sitemap.test.js"
