--- a/package.json
+++ b/package.json
@@ -14,11 +14,19 @@
     "url-join": "^4.0.0"
   },
   "devDependencies": {
-    "expresso": "^0.9.2",
-    "sinon": "^1.16.1"
+    "istanbul": "^0.4.5",
+    "jasmine": "^3.1.0"
   },
+  "standard": {
+    "env": {
+      "jasmine": true,
+      "node": true
+    }
+  },
+  "license": "MIT",
   "main": "index",
   "scripts": {
-    "test": "./node_modules/expresso/bin/expresso tests/sitemap.test.js"
+    "test": "istanbul cover --include-all-sources jasmine tests/sitemap.test.js",
+    "coverage": "open ./coverage/lcov-report/index.html"
   }
 }
