--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
     "istanbul": "^0.4.5",
     "jasmine": "^3.1.0"
   },
+  "engines": {
+    "npm": "^4.0.0",
+    "node": ">=6.0.0"
+  },
   "standard": {
     "env": {
       "jasmine": true,
