unsafe real typescript

--- a/.npmignore
+++ b/.npmignore
@@ -6,3 +6,61 @@ Makefile
 *.swp
 .editorconfig
 .travis.yml
+.idea
+~ci.list.txt
+~ci.log.txt
+~ci.errors.txt
+*.stackdump
+*.bak
+*.old
+*.log
+tsconfig.json
+package-lock.json
+test
+.github
+.gitkeep
+/.*
+tests
+/~*
+__test__
+__tests__
+node_modules
+/node_modules/
+**/node_modules/
+*.ts
+!*.d.ts
+/bin/**/*.d.ts
+/bin/*.d.ts
+*.tgz
+/tsconfig.json.tpl
+yarn-error.log
+.git
+yarn.lock
+.env.local
+.env.*.local
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+*.vue.js
+*.vue.d.ts
+*.vue.js.map
+.nyc_output
+coverage
+/*.tpl
+webpack.config.js
+vue.config.js
+/jestconfig.json
+/tslint.json
+webpack.*.config.js
+webpack.*.config.d.ts
+webpack.*.config.js.map
+webpack.*.config.ts
+karma.conf.js
+/_config.yml
+intellij-style-guide.xml
