--- a/package.json
+++ b/package.json
@@ -94,7 +94,8 @@
           "args": "none"
         }
       ],
-      "@typescript-eslint/explicit-member-accessibility": "off"
+      "@typescript-eslint/explicit-member-accessibility": "off",
+      "@typescript-eslint/interface-name-prefix": "always"
     }
   },
   "jest": {
