--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
     "@babel/preset-typescript": "^7.3.3",
     "@types/jest": "^24.0.12",
     "@types/lodash": "^4.14.123",
+    "@types/lodash.chunk": "^4.2.6",
     "@types/node": "^12.0.2",
+    "@types/url-join": "^4.0.0",
     "@typescript-eslint/eslint-plugin": "^1.9.0",
     "@typescript-eslint/parser": "^1.9.0",
     "babel-eslint": "^10.0.1",
