--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   },
   "license": "MIT",
   "author": "Eugene Kalinin <e.v.kalinin@gmail.com>",
-  "main": "index",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "directories": {
     "lib": "lib",
     "test": "tests"
@@ -50,7 +51,6 @@
     "babel-preset-minify": "^0.5.0",
     "istanbul": "^0.4.5",
     "jasmine": "^3.4.0",
-    "jasmine-diff": "^0.1.3",
     "jest": "^24.8.0",
     "source-map": "~0.7.3",
     "standard": "^12.0.1",
