--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "istanbul": "^0.4.5",
     "jasmine": "^3.1.0",
     "jasmine-diff": "^0.1.3",
-    "stats-lite": "^2.1.1"
+    "stats-lite": "^2.1.1",
+    "whatwg-url": "^7.0.0"
   },
   "engines": {
     "npm": ">=4.0.0",
