Add a basic CLI

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,6 @@
     "moduleResolution": "node",
     "lib": ["ES2018"]
   },
-  "include": ["index.ts"],
+  "include": ["index.ts", "cli.ts"],
   "exclude": ["node_modules"]
 }
