--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "author": "Eugene Kalinin <e.v.kalinin@gmail.com>",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "bin": "./dist/cli.js",
   "directories": {
     "lib": "lib",
     "test": "tests"
@@ -89,6 +90,7 @@
     }
   },
   "dependencies": {
+    "arg": "^4.1.0",
     "lodash.chunk": "^4.2.0",
     "lodash.padstart": "^4.6.1",
     "whatwg-url": "^7.0.0",
