--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,8 @@ install:
   - npm install
 script:
   - npm test
+addons:
+  apt:
+    packages:
+      # Needed for `xmllint`.
+      - libxml2-utils
