--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "prepublishOnly": "sort-package-json && npm run test",
     "test": "tsc && jest && npm run test:schema",
     "test-perf": "node ./tests/perf.js",
-    "test:schema": "node tests/alltags.js | xmllint --schema tests/all.xsd --noout -",
+    "test:schema": "node tests/alltags.js | xmllint --schema schema/all.xsd --noout -",
     "test:typecheck": "tsc"
   },
   "husky": {
