--- a/package.json
+++ b/package.json
@@ -28,9 +28,9 @@
     "test": "eslint lib/* ./cli.ts && tsc && jest && npm run test:xmllint",
     "test-fast": "jest ./tests/sitemap-item.test.ts ./tests/sitemap-index.test.ts ./tests/sitemap.test.ts ./tests/sitemap-shape.test.ts",
     "test-perf": "node ./tests/perf.js > /dev/null",
-    "test:xmllint": "if which xmllint; then npm run test:schema; else echo 'skipping xml tests. xmllint not installed'; fi",
     "test:schema": "node tests/alltags.js | xmllint --schema schema/all.xsd --noout -",
-    "test:typecheck": "tsc"
+    "test:typecheck": "tsc",
+    "test:xmllint": "if which xmllint; then npm run test:schema; else echo 'skipping xml tests. xmllint not installed'; fi"
   },
   "husky": {
     "hooks": {
