ignore xmllint for coverage

--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "collectCoverageFrom": [
       "lib/**/*.ts",
       "!lib/**/*.d.ts",
+      "!lib/xmllint.ts",
       "!node_modules/"
     ],
     "coverageThreshold": {
