--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
   },
   "dependencies": {
     "@types/node": "^12.0.2",
+    "@types/sax": "^1.2.0",
     "arg": "^4.1.1",
     "xmlbuilder": "^13.0.0"
   },
