--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     },
     "extends": [
       "eslint:recommended",
+      "plugin:@typescript-eslint/eslint-recommended",
       "plugin:@typescript-eslint/recommended"
     ],
     "parser": "@typescript-eslint/parser",
@@ -59,7 +60,6 @@
       "no-case-declarations": 0,
       "no-console": 0,
       "no-unused-vars": 0,
-      "react/prop-types": 0,
       "indent": "off",
       "no-dupe-class-members": "off",
       "@typescript-eslint/indent": [
@@ -110,12 +110,12 @@
     "@babel/plugin-transform-typescript": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-typescript": "^7.3.3",
-    "@types/jest": "^24.0.17",
+    "@types/jest": "^24.0.18",
     "@typescript-eslint/eslint-plugin": "^2.0.0",
     "@typescript-eslint/parser": "^2.0.0",
-    "babel-eslint": "^10.0.1",
+    "babel-eslint": "^10.0.3",
     "babel-polyfill": "^6.26.0",
-    "eslint": "^6.2.0",
+    "eslint": "^6.2.2",
     "husky": "^3.0.4",
     "jasmine": "^3.4.0",
     "jest": "^24.9.0",
