--- a/package.json
+++ b/package.json
@@ -42,7 +42,6 @@
   "eslintConfig": {
     "env": {
       "es6": true,
-      "jasmine": true,
       "jest": true,
       "node": true
     },
@@ -66,6 +65,21 @@
       "no-unused-vars": 0,
       "indent": "off",
       "no-dupe-class-members": "off",
+      "lines-between-class-members": [
+        "error",
+        "always",
+        {
+          "exceptAfterSingleLine": true
+        }
+      ],
+      "padding-line-between-statements": [
+        "error",
+        {
+          "blankLine": "always",
+          "prev": "multiline-expression",
+          "next": "multiline-expression"
+        }
+      ],
       "@typescript-eslint/indent": [
         "error",
         2
