--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "prepublishOnly": "sort-package-json && npm run test",
     "test": "eslint lib/* ./cli.ts && tsc && jest && npm run test:xmllint",
     "test:fast": "eslint lib/* ./cli.ts && tsc && jest ./tests/sitemap*",
-    "test:perf": "node ./tests/perf.js > /dev/null",
+    "test:perf": "node ./tests/perf.js",
     "test:schema": "node tests/alltags.js | xmllint --schema schema/all.xsd --noout -",
     "test:typecheck": "tsc",
     "test:xmllint": "if which xmllint; then npm run test:schema; else echo 'skipping xml tests. xmllint not installed'; fi",
