--- a/package.json
+++ b/package.json
@@ -140,11 +140,14 @@
     "concurrently": "^4.1.2",
     "eslint": "^6.3.0",
     "eslint-plugin-jest": "^22.16.0",
+    "express": "^4.17.1",
     "husky": "^3.0.4",
     "jest": "^24.9.0",
     "sort-package-json": "^1.22.1",
     "source-map": "~0.7.3",
     "stats-lite": "^2.2.0",
+    "stream-json": "^1.3.1",
+    "through2-map": "^3.0.0",
     "typescript": "^3.6.2"
   },
   "engines": {
