--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,9 @@
 language: node_js
 node_js:
-  - "8.9"
-  - "10"
+  - "10.3"
   - "12"
 install:
-  - npm install
+  - npm ci
 script:
   - travis_retry npm test
 addons:
