--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "prepublishOnly": "sort-package-json && npm run test",
     "test": "eslint lib/* ./cli.ts && tsc && jest && npm run test:xmllint",
     "test:fast": "eslint lib/* ./cli.ts && tsc && jest ./tests/sitemap*",
-    "test:perf": "node ./tests/perf.js > /dev/null",
+    "test:perf": "node ./tests/perf.js",
     "test:schema": "node tests/alltags.js | xmllint --schema schema/all.xsd --noout -",
     "test:typecheck": "tsc",
     "test:xmllint": "if which xmllint; then npm run test:schema; else echo 'skipping xml tests. xmllint not installed'; fi",
@@ -120,35 +120,38 @@
     }
   },
   "dependencies": {
-    "@types/node": "^12.7.3",
+    "@types/node": "^12.7.11",
     "@types/sax": "^1.2.0",
     "arg": "^4.1.1",
     "sax": "^1.2.4",
     "xmlbuilder": "^13.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.5.5",
+    "@babel/core": "^7.6.2",
     "@babel/plugin-proposal-class-properties": "^7.5.5",
-    "@babel/plugin-transform-typescript": "^7.5.5",
-    "@babel/preset-env": "^7.5.5",
-    "@babel/preset-typescript": "^7.3.3",
+    "@babel/plugin-transform-typescript": "^7.6.0",
+    "@babel/preset-env": "^7.6.2",
+    "@babel/preset-typescript": "^7.6.0",
     "@types/jest": "^24.0.18",
-    "@typescript-eslint/eslint-plugin": "^2.0.0",
-    "@typescript-eslint/parser": "^2.0.0",
+    "@typescript-eslint/eslint-plugin": "^2.3.2",
+    "@typescript-eslint/parser": "^2.3.2",
     "babel-eslint": "^10.0.3",
     "babel-polyfill": "^6.26.0",
     "concurrently": "^4.1.2",
-    "eslint": "^6.3.0",
-    "eslint-plugin-jest": "^22.16.0",
-    "husky": "^3.0.4",
+    "eslint": "^6.5.1",
+    "eslint-plugin-jest": "^22.17.0",
+    "express": "^4.17.1",
+    "husky": "^3.0.8",
     "jest": "^24.9.0",
     "sort-package-json": "^1.22.1",
     "source-map": "~0.7.3",
     "stats-lite": "^2.2.0",
-    "typescript": "^3.6.2"
+    "stream-json": "^1.3.1",
+    "through2-map": "^3.0.0",
+    "typescript": "^3.6.3"
   },
   "engines": {
-    "node": ">=8.9.0",
+    "node": ">=10.0.0",
     "npm": ">=5.6.0"
   },
   "License": "MIT"
