--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,12 @@
 {
   "compilerOptions": {
-    "sourceMap": true,
+    "sourceMap": false,
     "outDir": "./dist/",
-    "noImplicitAny": true,
-    "noImplicitThis": true,
     "strictNullChecks": true,
     "strict": true,
     "declaration": true,
     "module": "CommonJS",
-    "target": "ES2015",
+    "target": "ES2018",
     "esModuleInterop": true,
     "moduleResolution": "node",
     "lib": ["es2018"]
