--- a/package.json
+++ b/package.json
@@ -52,7 +52,9 @@
     "extends": [
       "eslint:recommended",
       "plugin:@typescript-eslint/eslint-recommended",
-      "plugin:@typescript-eslint/recommended"
+      "plugin:@typescript-eslint/recommended",
+      "prettier/@typescript-eslint",
+      "plugin:prettier/recommended"
     ],
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
@@ -83,10 +85,6 @@
           "prev": "multiline-expression",
           "next": "multiline-expression"
         }
-      ],
-      "@typescript-eslint/indent": [
-        "error",
-        2
       ],
       "@typescript-eslint/no-parameter-properties": "off",
       "@typescript-eslint/no-unused-vars": [
@@ -120,7 +118,7 @@
     }
   },
   "dependencies": {
-    "@types/node": "^12.11.5",
+    "@types/node": "^12.11.7",
     "@types/sax": "^1.2.0",
     "arg": "^4.1.1",
     "sax": "^1.2.4",
@@ -132,17 +130,20 @@
     "@babel/plugin-transform-typescript": "^7.6.3",
     "@babel/preset-env": "^7.6.3",
     "@babel/preset-typescript": "^7.6.0",
-    "@types/jest": "^24.0.19",
+    "@types/jest": "^24.0.20",
     "@typescript-eslint/eslint-plugin": "^2.5.0",
     "@typescript-eslint/parser": "^2.5.0",
     "babel-eslint": "^10.0.3",
     "babel-polyfill": "^6.26.0",
-    "concurrently": "^4.1.2",
-    "eslint": "^6.5.1",
-    "eslint-plugin-jest": "^22.20.0",
+    "concurrently": "^5.0.0",
+    "eslint": "^6.6.0",
+    "eslint-config-prettier": "^6.5.0",
+    "eslint-plugin-jest": "^22.20.1",
+    "eslint-plugin-prettier": "^3.1.1",
     "express": "^4.17.1",
     "husky": "^3.0.9",
     "jest": "^24.9.0",
+    "prettier": "^1.18.2",
     "sort-package-json": "^1.22.1",
     "source-map": "~0.7.3",
     "stats-lite": "^2.2.0",
