--- a/package.json
+++ b/package.json
@@ -39,9 +39,20 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "sort-package-json",
+      "pre-commit": "lint-staged",
       "pre-push": "npm run test:fast"
     }
+  },
+  "lint-staged": {
+    "package.json": [
+      "sort-package-json",
+      "git add"
+    ],
+    "{lib,tests}/**/*.ts": [
+      "eslint --fix",
+      "prettier --write",
+      "git add"
+    ]
   },
   "eslintConfig": {
     "env": {
@@ -144,6 +155,7 @@
     "express": "^4.17.1",
     "husky": "^3.1.0",
     "jest": "^24.9.0",
+    "lint-staged": "^9.2.1",
     "prettier": "^1.19.1",
     "sort-package-json": "^1.23.1",
     "source-map": "~0.7.3",
