--- a/package.json
+++ b/package.json
@@ -138,6 +138,7 @@
   "devDependencies": {
     "@babel/core": "^7.7.2",
     "@babel/plugin-proposal-class-properties": "^7.7.0",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.7.4",
     "@babel/plugin-proposal-optional-chaining": "^7.6.0",
     "@babel/plugin-transform-typescript": "^7.7.2",
     "@babel/preset-env": "^7.7.1",
