fix more build issues

--- a/package.json
+++ b/package.json
@@ -143,10 +143,13 @@
     "@typescript-eslint/parser": "^2.19.0",
     "babel-eslint": "^10.0.3",
     "babel-polyfill": "^6.26.0",
+    "concurrently": "^5.1.0",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-jest": "^23.7.0",
     "eslint-plugin-prettier": "^3.1.2",
+    "husky": "^4.2.1",
+    "jest": "^25.1.0",
     "lint-staged": "^9.5.0",
     "prettier": "^1.19.1",
     "sort-package-json": "^1.39.1",
