--- a/package.json
+++ b/package.json
@@ -44,13 +44,11 @@
   },
   "lint-staged": {
     "package.json": [
-      "sort-package-json",
-      "git add"
+      "sort-package-json"
     ],
     "{lib,tests}/**/*.ts": [
       "eslint --fix",
-      "prettier --write",
-      "git add"
+      "prettier --write"
     ]
   },
   "eslintConfig": {
@@ -125,7 +123,7 @@
     }
   },
   "dependencies": {
-    "@types/node": "^12.12.27",
+    "@types/node": "^13.7.1",
     "@types/sax": "^1.2.1",
     "arg": "^4.1.3",
     "sax": "^1.2.4"
@@ -151,7 +149,7 @@
     "express": "^4.17.1",
     "husky": "^4.2.3",
     "jest": "^25.1.0",
-    "lint-staged": "^9.5.0",
+    "lint-staged": "^10.0.7",
     "prettier": "^1.19.1",
     "sort-package-json": "^1.39.1",
     "source-map": "~0.7.3",
