--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sitemap",
-  "version": "5.1.0",
+  "version": "6.0.0",
   "description": "Sitemap-generating lib/cli",
   "keywords": [
     "sitemap",
@@ -39,9 +39,17 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "sort-package-json",
-      "pre-push": "npm run test:fast"
+      "pre-commit": "lint-staged && npm run test:fast"
     }
+  },
+  "lint-staged": {
+    "package.json": [
+      "sort-package-json"
+    ],
+    "{lib,tests}/**/*.ts": [
+      "eslint --fix",
+      "prettier --write"
+    ]
   },
   "eslintConfig": {
     "env": {
@@ -66,18 +74,6 @@
       "plugin:prettier/recommended"
     ],
     "rules": {
-      "@typescript-eslint/explicit-member-accessibility": "off",
-      "@typescript-eslint/interface-name-prefix": [
-        2,
-        "always"
-      ],
-      "@typescript-eslint/no-parameter-properties": "off",
-      "@typescript-eslint/no-unused-vars": [
-        "error",
-        {
-          "args": "none"
-        }
-      ],
       "indent": "off",
       "lines-between-class-members": [
         "error",
@@ -96,6 +92,15 @@
           "blankLine": "always",
           "prev": "multiline-expression",
           "next": "multiline-expression"
+        }
+      ],
+      "@typescript-eslint/explicit-member-accessibility": "off",
+      "@typescript-eslint/interface-name-prefix": "off",
+      "@typescript-eslint/no-parameter-properties": "off",
+      "@typescript-eslint/no-unused-vars": [
+        "error",
+        {
+          "args": "none"
         }
       ]
     }
@@ -118,19 +123,20 @@
     }
   },
   "dependencies": {
-    "@types/node": "^12.12.27",
+    "@types/node": "^13.7.4",
     "@types/sax": "^1.2.1",
     "arg": "^4.1.3",
-    "sax": "^1.2.4",
-    "xmlbuilder": "^13.0.2"
+    "sax": "^1.2.4"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
-    "@babel/plugin-proposal-class-properties": "^7.7.4",
-    "@babel/plugin-transform-typescript": "^7.7.4",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.8.3",
+    "@babel/plugin-proposal-optional-chaining": "^7.8.3",
+    "@babel/plugin-transform-typescript": "^7.8.3",
     "@babel/preset-env": "^7.8.4",
-    "@babel/preset-typescript": "^7.7.4",
-    "@types/jest": "^25.1.0",
+    "@babel/preset-typescript": "^7.8.3",
+    "@types/jest": "^25.1.3",
     "@typescript-eslint/eslint-plugin": "^2.20.0",
     "@typescript-eslint/parser": "^2.20.0",
     "babel-eslint": "^10.0.3",
@@ -139,17 +145,18 @@
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-jest": "^23.7.0",
-    "eslint-plugin-prettier": "^3.1.1",
+    "eslint-plugin-prettier": "^3.1.2",
     "express": "^4.17.1",
     "husky": "^4.2.3",
     "jest": "^25.1.0",
+    "lint-staged": "^10.0.7",
     "prettier": "^1.19.1",
-    "sort-package-json": "^1.39.1",
+    "sort-package-json": "^1.40.0",
     "source-map": "~0.7.3",
     "stats-lite": "^2.2.0",
-    "stream-json": "^1.3.1",
+    "stream-json": "^1.3.3",
     "through2-map": "^3.0.0",
-    "typescript": "^3.7.4"
+    "typescript": "^3.8.2"
   },
   "engines": {
     "node": ">=10.0.0",
