--- a/package.json
+++ b/package.json
@@ -103,7 +103,22 @@
           "args": "none"
         }
       ]
-    }
+    },
+    "overrides": [
+      {
+        "files": [
+          "*.js"
+        ],
+        "rules": {
+          "@typescript-eslint/explicit-function-return-type": [
+            "off"
+          ],
+          "@typescript-eslint/no-var-requires": [
+            "off"
+          ]
+        }
+      }
+    ]
   },
   "jest": {
     "collectCoverage": true,
