--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
           "next": "multiline-expression"
         }
       ],
+      "@typescript-eslint/camelcase": "off",
       "@typescript-eslint/explicit-member-accessibility": "off",
       "@typescript-eslint/interface-name-prefix": "off",
       "@typescript-eslint/no-parameter-properties": "off",
