--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sitemap",
-  "version": "6.1.3",
+  "version": "6.1.4",
   "description": "Sitemap-generating lib/cli",
   "keywords": [
     "sitemap",
@@ -25,7 +25,7 @@
   },
   "scripts": {
     "build": "tsc",
-    "prepublishOnly": "sort-package-json && npm run test",
+    "prepublishOnly": "git clean -xdf && npm run test",
     "test": "eslint lib/* ./cli.ts && tsc && jest && npm run test:xmllint",
     "test:fast": "eslint lib/* ./cli.ts && tsc && jest ./tests/sitemap*",
     "test:perf": "node ./tests/perf.js",
