--- a/package.json
+++ b/package.json
@@ -94,6 +94,12 @@
           "next": "multiline-expression"
         }
       ],
+      "@typescript-eslint/ban-ts-comment": [
+        "error",
+        {
+          "ts-expect-error": "allow-with-description"
+        }
+      ],
       "@typescript-eslint/explicit-member-accessibility": "off",
       "@typescript-eslint/naming-convention": [
         "error",
@@ -149,40 +155,40 @@
     }
   },
   "dependencies": {
-    "@types/node": "^14.0.18",
+    "@types/node": "^14.6.4",
     "@types/sax": "^1.2.1",
     "arg": "^4.1.3",
     "sax": "^1.2.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.10.4",
+    "@babel/core": "^7.11.6",
     "@babel/plugin-proposal-class-properties": "^7.10.4",
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.10.4",
-    "@babel/plugin-proposal-optional-chaining": "^7.10.4",
-    "@babel/plugin-transform-typescript": "^7.10.4",
-    "@babel/preset-env": "^7.10.4",
+    "@babel/plugin-proposal-optional-chaining": "^7.11.0",
+    "@babel/plugin-transform-typescript": "^7.11.0",
+    "@babel/preset-env": "^7.11.5",
     "@babel/preset-typescript": "^7.10.4",
-    "@types/jest": "^26.0.4",
-    "@typescript-eslint/eslint-plugin": "^3.6.0",
-    "@typescript-eslint/parser": "^3.6.0",
+    "@types/jest": "^26.0.13",
+    "@typescript-eslint/eslint-plugin": "^4.0.1",
+    "@typescript-eslint/parser": "^4.0.1",
     "babel-eslint": "^10.1.0",
     "babel-polyfill": "^6.26.0",
-    "concurrently": "^5.2.0",
-    "eslint": "^7.4.0",
+    "concurrently": "^5.3.0",
+    "eslint": "^7.8.1",
     "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-jest": "^23.18.0",
+    "eslint-plugin-jest": "^24.0.0",
     "eslint-plugin-prettier": "^3.1.4",
     "express": "^4.17.1",
     "husky": "^4.2.5",
-    "jest": "^26.1.0",
-    "lint-staged": "^10.2.11",
-    "prettier": "^2.0.5",
+    "jest": "^26.4.2",
+    "lint-staged": "^10.3.0",
+    "prettier": "^2.1.1",
     "sort-package-json": "^1.44.0",
     "source-map": "~0.7.3",
     "stats-lite": "^2.2.0",
-    "stream-json": "^1.5.0",
+    "stream-json": "^1.7.1",
     "through2-map": "^3.0.0",
-    "typescript": "^3.9.6"
+    "typescript": "^4.0.2"
   },
   "engines": {
     "node": ">=10.3.0",
