Fixes 366 - Allows options to be passed to mergeStreams
- Fixes 366
- mergeStreams now works with options passed in, which allows objectMode to be set to true, allowing an interesting use case where a `SitemapStream` uses an existing source file stream *and* another stream that allows more items to be added without having to hydrate and maintain the entire map in memory

--- a/package.json
+++ b/package.json
@@ -165,6 +165,7 @@
     "@babel/preset-env": "^7.14.0",
     "@babel/preset-typescript": "^7.13.0",
     "@types/jest": "^26.0.23",
+    "@types/memorystream": "^0.3.0",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "@typescript-eslint/parser": "^4.22.0",
     "babel-eslint": "^10.1.0",
@@ -177,6 +178,7 @@
     "husky": "^4.3.8",
     "jest": "^26.6.3",
     "lint-staged": "^10.5.4",
+    "memorystream": "^0.3.1",
     "prettier": "^2.2.1",
     "sort-package-json": "^1.49.0",
     "source-map": "~0.7.3",
