--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sitemap",
-  "version": "7.0.0",
+  "version": "7.1.0",
   "description": "Sitemap-generating lib/cli",
   "keywords": [
     "sitemap",
@@ -25,6 +25,7 @@
   },
   "scripts": {
     "build": "tsc",
+    "prepare": "husky install",
     "prepublishOnly": "rm -rf dist && npm run test",
     "test": "eslint lib/* ./cli.ts && tsc && jest ./tests/sitemap*",
     "test:full": "eslint lib/* ./cli.ts && tsc && jest && npm run test:xmllint",
@@ -32,11 +33,6 @@
     "test:schema": "node tests/alltags.js | xmllint --schema schema/all.xsd --noout -",
     "test:typecheck": "tsc",
     "test:xmllint": "if which xmllint; then npm run test:schema; else echo 'skipping xml tests. xmllint not installed'; fi"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged && npm run test"
-    }
   },
   "lint-staged": {
     "package.json": [
@@ -151,7 +147,7 @@
     }
   },
   "dependencies": {
-    "@types/node": "^15.0.1",
+    "@types/node": "^17.0.5",
     "@types/sax": "^1.2.1",
     "arg": "^5.0.0",
     "sax": "^1.2.4"
@@ -164,20 +160,20 @@
     "@babel/plugin-transform-typescript": "^7.13.0",
     "@babel/preset-env": "^7.14.0",
     "@babel/preset-typescript": "^7.13.0",
-    "@types/jest": "^26.0.23",
+    "@types/jest": "^27.4.0",
     "@types/memorystream": "^0.3.0",
-    "@typescript-eslint/eslint-plugin": "^4.22.0",
-    "@typescript-eslint/parser": "^4.22.0",
+    "@typescript-eslint/eslint-plugin": "^5.8.1",
+    "@typescript-eslint/parser": "^5.8.1",
     "babel-eslint": "^10.1.0",
     "babel-polyfill": "^6.26.0",
-    "eslint": "^7.25.0",
+    "eslint": "^8.5.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-jest": "^24.3.6",
-    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-jest": "^25.3.3",
+    "eslint-plugin-prettier": "^4.0.0",
     "express": "^4.17.1",
-    "husky": "^4.3.8",
-    "jest": "^26.6.3",
-    "lint-staged": "^10.5.4",
+    "husky": "^7.0.0",
+    "jest": "^27.4.5",
+    "lint-staged": "^12.1.4",
     "memorystream": "^0.3.1",
     "prettier": "^2.2.1",
     "sort-package-json": "^1.49.0",
