--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   },
   "scripts": {
     "build": "tsc",
-    "prepare": "husky install",
+    "prepare": "husky",
     "prepublishOnly": "rm -rf dist && npm run test",
     "test": "eslint lib/* ./cli.ts && tsc && jest ./tests/sitemap*",
     "test:full": "eslint lib/* ./cli.ts && tsc && jest && npm run test:xmllint",
@@ -168,16 +168,16 @@
     "eslint-plugin-jest": "^25.3.3",
     "eslint-plugin-prettier": "^4.0.0",
     "express": "^4.17.1",
-    "husky": "^7.0.0",
+    "husky": "^9.0.11",
     "jest": "^27.4.5",
-    "lint-staged": "^12.1.4",
+    "lint-staged": "^15.2.4",
     "memorystream": "^0.3.1",
     "prettier": "^2.2.1",
     "sort-package-json": "^1.49.0",
     "source-map": "~0.7.3",
     "stats-lite": "^2.2.0",
     "stream-json": "^1.7.1",
-    "through2-map": "^3.0.0",
+    "through2-map": "^4.0.0",
     "typescript": "^5.4.5"
   },
   "engines": {
