--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -3,20 +3,29 @@ name: Node CI
 on: [push, pull_request]
 
 jobs:
-  build:
-
+  install-deps:
     runs-on: ubuntu-latest
-
     strategy:
       matrix:
         node-version: [12.x, 14.x, 16.x]
-
     steps:
-    - uses: actions/checkout@v1
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v1
+      - uses: actions/checkout@v4
+      - uses: ./.github/actions/configure-nodejs
+        with:
+          node-version: ${{ matrix.node-version }}
+          lookup-only: 'true' # We only want to lookup from the cache - if a hit, this job does nothing
+
+  build:
+    needs:
+      - install-deps
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [12.x, 14.x, 16.x]
+    steps:
+    - uses: actions/checkout@v4
+    - uses: ./.github/actions/configure-nodejs
       with:
         node-version: ${{ matrix.node-version }}
-    - run: npm ci
     - run: npm run build --if-present
     - run: npm run test:full
