Use ts-jest instead of babel directly
Remove npm ci step
Fix tsconfig.json
Add ts-jest
f
.

--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -29,5 +29,7 @@ jobs:
     - uses: ./.github/actions/configure-nodejs
       with:
         node-version: ${{ matrix.node-version }}
-    - run: npm run build --if-present
-    - run: npm run test:full
+    - run: npm run build
+    - run: npm run lint
+    - run: npm run test
+    - run: npm run test:xmllint
